Update CV download link in index.html

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ document.addEventListener("DOMContentLoaded", function () {
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('./assets/DHILLIPRASATHRCV.pdf')"
+            onclick="window.open('./assets/DPR95N.pdf')"
           >
             Download CV
           </button>
